--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Apple (India)</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="https://img.icons8.com/ios/50/000000/mac-os.png">
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -88,7 +88,7 @@
       <p><a class="ipad-link" href="#">Learn more></a>
         <a class="ipad-link" href="#">Order ></a>
       </p>
-      <img class="ipad-img" src="images/ipad.png" alt="ipad picture">
+      <img class="ipad-img" src="ipad.png" alt="ipad picture">
     </div>
   </section>
 
@@ -106,7 +106,7 @@
       <p class="links" ><a class="ipad-link" href="#">Learn more></a>
         <a class="ipad-link" href="#">Buy ></a>
       </p>
-      <img class="imgip" src="images/iphone12.png" alt="iphone picture">
+      <img class="imgip" src="iphone12.png" alt="iphone picture">
     </div>
   </section>
 
@@ -120,7 +120,7 @@
       <p class="links"><a class="ipad-link" href="#">Learn more></a>
         <a class="ipad-link" href="#">Order ></a>
       </p>
-      <img class="imgip" src="images/iMac.png" alt="iMac picture">
+      <img class="imgip" src="iMac.png" alt="iMac picture">
     </div>
   </section>
 
@@ -134,7 +134,7 @@
           <p><a class="learnlink" href="#">Learn more></a>
             <a class="learnlink" href="#">Buy ></a>
           </p>
-          <img class="img" src="images/iphone12pro.png" alt="">
+          <img class="img" src="iphone12pro.png" alt="">
         </div>
       </div>
     </div>
@@ -148,7 +148,7 @@
           <p><a class="learnlink" href="#">Learn more></a>
             <a class="learnlink" href="#">Buy ></a>
           </p>
-          <img class="img" src="images/watch.png" alt="">
+          <img class="img" src="watch.png" alt="">
         </div>
       </div>
     </div>
@@ -161,7 +161,7 @@
           <p><a class="learnlink" href="#">Learn more></a>
             <a class="learnlink" href="#">Buy ></a>
           </p>
-          <img class="img" src="images/airtag.png" alt="">
+          <img class="img" src="airtag.png" alt="">
         </div>
       </div>
     </div>
@@ -175,7 +175,7 @@
           <p><a class="learnlink" href="#">Learn more></a>
             <a class="learnlink" href="#">Buy ></a>
           </p>
-          <img class="img" src="images/tv.png" alt="">
+          <img class="img" src="tv.png" alt="">
         </div>
       </div>
     </div>
@@ -188,7 +188,7 @@
           <p><a class="learnlink" href="#">Learn more></a>
             <a class="learnlink" href="#">Try it free ></a>
           </p>
-          <img class="img" src="images/arcade-img.png" alt="">
+          <img class="img" src="arcade-img.png" alt="">
         </div>
       </div>
     </div>
@@ -196,7 +196,7 @@
     <div class="types-col col-lg-6 col-md-12">
       <div class="airtag card">
         <div class="card-body">
-          <img class="mythicquestimg" src="images/mythicquest.png" alt="">
+          <img class="mythicquestimg" src="mythicquest.png" alt="">
         </div>
       </div>
     </div>
